--- a/app/src/main/res/layout/activity_list_of_groups.xml
+++ b/app/src/main/res/layout/activity_list_of_groups.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.ListOfChatsActivity"
-    >
+    tools:context=".activities.ListOfChatsActivity">
 
     <EditText
         android:id="@+id/newChatText"
@@ -56,4 +55,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/newChatButton"
         tools:listitem="@layout/item_chat" />
-</RelativeLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
