--- a/app/src/main/res/layout/profile.xml
+++ b/app/src/main/res/layout/profile.xml
@@ -9,70 +9,78 @@
         android:id="@+id/textView5"
         android:layout_width="149dp"
         android:layout_height="28dp"
+        android:layout_marginTop="24dp"
         android:text="Usuario"
         android:textAlignment="center"
         android:textSize="20sp"
-        tools:layout_editor_absoluteX="131dp"
-        tools:layout_editor_absoluteY="314dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
         tools:ignore="MissingConstraints" />
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="149dp"
         android:layout_height="28dp"
+        android:layout_marginTop="20dp"
         android:text="Carrera"
         android:textAlignment="center"
         android:textSize="20sp"
-        tools:layout_editor_absoluteX="131dp"
-        tools:layout_editor_absoluteY="363dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView5"
         tools:ignore="MissingConstraints" />
 
     <TextView
         android:id="@+id/textView4"
         android:layout_width="149dp"
         android:layout_height="28dp"
+        android:layout_marginTop="20dp"
         android:text="Correo"
         android:textAlignment="center"
         android:textSize="20sp"
-        tools:layout_editor_absoluteX="131dp"
-        tools:layout_editor_absoluteY="411dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView3"
+        app:layout_constraintVertical_bias="0.003"
         tools:ignore="MissingConstraints" />
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="190dp"
         android:layout_height="189dp"
+        android:layout_marginStart="110dp"
+        android:layout_marginTop="51dp"
+        android:layout_marginEnd="111dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/profile_picture"
-        tools:layout_editor_absoluteX="110dp"
-        tools:layout_editor_absoluteY="51dp"
         tools:ignore="MissingConstraints" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="149dp"
         android:layout_height="28dp"
+        android:layout_marginTop="24dp"
         android:text="Nombre"
         android:textAlignment="center"
         android:textSize="20sp"
-        tools:layout_editor_absoluteX="131dp"
-        tools:layout_editor_absoluteY="269dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView"
         tools:ignore="MissingConstraints" />
 
-    <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="109dp"
-        android:layout_height="84dp"
-        app:srcCompat="@drawable/ic_baseline_message_24"
-        tools:layout_editor_absoluteX="151dp"
-        tools:layout_editor_absoluteY="557dp"
-        tools:ignore="MissingConstraints" />
+    <Button
+        android:id="@+id/logOut"
+        android:layout_width="125dp"
+        android:layout_height="48dp"
+        android:background="@drawable/button_rounded"
+        android:text="Cerrar sesion"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
-    <ImageView
-        android:id="@+id/imageView4"
-        android:layout_width="58dp"
-        android:layout_height="71dp"
-        app:srcCompat="@drawable/img"
-        tools:layout_editor_absoluteX="353dp"
-        tools:layout_editor_absoluteY="-1dp"
-        tools:ignore="MissingConstraints" />
 </androidx.constraintlayout.widget.ConstraintLayout>
