--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -5,6 +5,10 @@
 
     <group android:checkableBehavior="single">
         <item
+            android:id="@+id/nav_groups"
+            android:icon="@drawable/ic_group"
+            android:title="Grupos" />
+        <item
             android:id="@+id/nav_profile"
             android:icon="@drawable/ic_profile"
             android:title="@string/perfil" />
@@ -17,7 +21,7 @@
             android:icon="@drawable/ic_add"
             android:title="@string/nuevo_grupo" />
         <item
-            android:id="@+id/vav_settings"
+            android:id="@+id/nav_settings"
             android:icon="@drawable/ic_settings"
             android:title="@string/configuracion" />
     </group>
