--- a/app/src/main/res/layout/activity_list_of_groups.xml
+++ b/app/src/main/res/layout/activity_list_of_groups.xml
@@ -54,6 +54,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/newChatButton"
-        tools:listitem="@layout/item_chat" />
+        tools:listitem="@layout/item_groupchat" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
