--- a/app/src/main/res/layout/activity_list_of_chats.xml
+++ b/app/src/main/res/layout/activity_list_of_chats.xml
@@ -6,46 +6,38 @@
     android:layout_height="match_parent"
     tools:context=".activities.ListOfChatsActivity">
 
-    <EditText
-        android:id="@+id/newChatText"
-        android:layout_width="142dp"
-        android:layout_height="45dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:ems="10"
-        android:hint="Email"
-        android:inputType="textEmailAddress"
-        android:minHeight="48dp"
-        app:layout_constraintEnd_toStartOf="@+id/newChatButton"
-        app:layout_constraintHorizontal_bias="0.0"
+    <Button
+        android:id="@+id/gotoChats"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="11dp"
+        android:layout_marginBottom="4dp"
+        android:background="@drawable/button_rounded"
+        android:text="Crear Chat"
+        app:layout_constraintBottom_toTopOf="@+id/listChatsRecyclerView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/newChatButton"
+        android:id="@+id/profileButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="4dp"
-        android:text="Chat"
-        app:layout_constraintEnd_toStartOf="@id/logOutButton"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/logOutButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:text="LogOut"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginStart="106dp"
+        android:layout_marginTop="11dp"
+        android:layout_marginEnd="9dp"
+        android:layout_marginBottom="7dp"
+        android:background="@drawable/button_rounded"
+        android:text="Perfil"
+        app:layout_constraintBottom_toTopOf="@+id/listChatsRecyclerView"
+        app:layout_constraintEnd_toStartOf="@+id/GroupChats"
+        app:layout_constraintStart_toEndOf="@+id/gotoChats"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/listChatsRecyclerView"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="405dp"
+        android:layout_height="664dp"
         android:layout_marginStart="1dp"
         android:layout_marginTop="1dp"
         android:layout_marginEnd="1dp"
@@ -53,15 +45,20 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/newChatButton"
+        app:layout_constraintTop_toBottomOf="@+id/gotoChats"
         tools:listitem="@layout/item_chat" />
 
     <Button
         android:id="@+id/GroupChats"
-        android:layout_width="73dp"
-        android:layout_height="50dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="11dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="7dp"
+        android:background="@drawable/button_rounded"
         android:text="Group"
-        app:layout_constraintStart_toEndOf="@+id/newChatText"
-        tools:layout_editor_absoluteY="8dp" />
+        app:layout_constraintBottom_toTopOf="@+id/listChatsRecyclerView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
