--- a/app/src/main/res/layout/activity_list_of_groups.xml
+++ b/app/src/main/res/layout/activity_list_of_groups.xml
@@ -6,46 +6,33 @@
     android:layout_height="match_parent"
     tools:context=".activities.ListOfChatsActivity">
 
-    <EditText
-        android:id="@+id/newChatText"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:ems="10"
-        android:hint="Email"
-        android:inputType="textEmailAddress"
-        android:minHeight="48dp"
-        app:layout_constraintEnd_toStartOf="@+id/newChatButton"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <Button
-        android:id="@+id/newChatButton"
+        android:id="@+id/gotoChats"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:text="Chat"
-        app:layout_constraintEnd_toStartOf="@id/logOutButton"
+        android:background="@drawable/button_rounded"
+        app:layout_constraintEnd_toStartOf="@id/profileButton"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/logOutButton"
+        android:id="@+id/profileButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:text="LogOut"
+        android:background="@drawable/button_rounded"
+        android:text="Perfil"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/listChatsRecyclerView"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="407dp"
+        android:layout_height="666dp"
         android:layout_marginStart="1dp"
         android:layout_marginTop="1dp"
         android:layout_marginEnd="1dp"
@@ -53,7 +40,21 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/newChatButton"
+        app:layout_constraintTop_toBottomOf="@+id/gotoChats"
         tools:listitem="@layout/item_groupchat" />
+
+    <Button
+        android:id="@+id/goToCreate"
+        android:layout_width="102dp"
+        android:layout_height="49dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/button_rounded"
+        android:text="Crear Grupo"
+        app:layout_constraintBottom_toTopOf="@+id/listChatsRecyclerView"
+        app:layout_constraintEnd_toStartOf="@+id/gotoChats"
+        app:layout_constraintHorizontal_bias="0.124"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
