--- a/app/src/main/res/layout/fragment_message.xml
+++ b/app/src/main/res/layout/fragment_message.xml
@@ -17,23 +17,23 @@
         android:hint="Email"
         android:inputType="textEmailAddress"
         android:minHeight="48dp"
-        app:layout_constraintEnd_toStartOf="@+id/newChatButton"
+        app:layout_constraintEnd_toStartOf="@+id/gotoChats"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/newChatButton"
+        android:id="@+id/gotoChats"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:text="Chat"
-        app:layout_constraintEnd_toStartOf="@id/logOutButton"
+        app:layout_constraintEnd_toStartOf="@id/profileButton"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/logOutButton"
+        android:id="@+id/profileButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
@@ -54,6 +54,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/newChatButton"
+        app:layout_constraintTop_toBottomOf="@+id/gotoChats"
         tools:listitem="@layout/item_chat" />
 </RelativeLayout>
