--- a/app/src/main/res/layout/item_group_contacts.xml
+++ b/app/src/main/res/layout/item_group_contacts.xml
@@ -26,26 +26,26 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Email"
-                app:layout_constraintStart_toStartOf="@+id/Fecha"
+                app:layout_constraintStart_toStartOf="@+id/Username"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/Fecha"
+                android:id="@+id/Username"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:text="Fecha"
+                android:text="Username"
                 app:layout_constraintStart_toEndOf="@+id/imageView"
                 app:layout_constraintTop_toBottomOf="@+id/Email" />
 
             <TextView
-                android:id="@+id/Mensaje"
+                android:id="@+id/Status"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Mensaje"
+                android:text="Status"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/imageView"
-                app:layout_constraintTop_toBottomOf="@+id/Fecha"
+                app:layout_constraintTop_toBottomOf="@+id/Username"
                 app:layout_constraintVertical_bias="1.0" />
 
             <ImageView
@@ -57,6 +57,19 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:srcCompat="@tools:sample/avatars" />
+
+            <ImageButton
+                android:id="@+id/addUser"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/ic_baseline_add_circle_24"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.933"
+                app:layout_constraintStart_toEndOf="@+id/Username"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.49" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
