--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/profilePicSelect"
         android:layout_width="190dp"
         android:layout_height="189dp"
         android:layout_marginStart="110dp"
@@ -43,7 +43,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.505"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        app:layout_constraintTop_toBottomOf="@+id/profilePicSelect"
         tools:ignore="MissingConstraints" />
 
     <TextView
@@ -84,7 +84,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textCorreo" />
+        app:layout_constraintTop_toBottomOf="@+id/textCorreo"
+        app:layout_constraintVertical_bias="0.297" />
 
     <Button
         android:id="@+id/goChat"
@@ -94,7 +95,7 @@
         android:background="@drawable/button_rounded"
 
         android:text="Chat"
-        app:layout_constraintBottom_toTopOf="@+id/imageView"
+        app:layout_constraintBottom_toTopOf="@+id/profilePicSelect"
         app:layout_constraintEnd_toStartOf="@+id/goGroup"
         app:layout_constraintHorizontal_bias="0.462"
         app:layout_constraintStart_toStartOf="parent"
@@ -109,9 +110,22 @@
         android:layout_marginEnd="68dp"
         android:background="@drawable/button_rounded"
         android:text="Group"
-        app:layout_constraintBottom_toTopOf="@+id/imageView"
+        app:layout_constraintBottom_toTopOf="@+id/profilePicSelect"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"/>
+
+    <Button
+        android:id="@+id/Encriptar"
+        android:layout_width="183dp"
+        android:layout_height="47dp"
+        android:background="@drawable/button_rounded"
+        android:text="Encriptar Contraseña"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.49"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/logOut"
+        app:layout_constraintVertical_bias="0.3" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
