--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -45,7 +45,7 @@
         tools:ignore="MissingConstraints" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/profilePicSelect"
         android:layout_width="186dp"
         android:layout_height="285dp"
         android:layout_alignParentTop="true"
