--- a/app/src/main/res/layout/item_group.xml
+++ b/app/src/main/res/layout/item_group.xml
@@ -35,7 +35,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:text="Fecha"
-                app:layout_constraintStart_toEndOf="@+id/imageView"
+                app:layout_constraintStart_toEndOf="@+id/profilePicSelect"
                 app:layout_constraintTop_toBottomOf="@+id/Email" />
 
             <TextView
@@ -44,18 +44,20 @@
                 android:layout_height="wrap_content"
                 android:text="Mensaje"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/imageView"
+                app:layout_constraintStart_toEndOf="@+id/profilePicSelect"
                 app:layout_constraintTop_toBottomOf="@+id/Fecha"
                 app:layout_constraintVertical_bias="1.0" />
 
             <ImageView
-                android:id="@+id/imageView"
+                android:id="@+id/profilePicSelect"
                 android:layout_width="75dp"
                 android:layout_height="75dp"
                 android:paddingRight="8dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
+                android:background="@drawable/profile_rounded"
+                app:srcCompat="@drawable/profile_picture"
                 tools:srcCompat="@tools:sample/avatars" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
