--- a/app/src/main/res/layout/item_group_contacts.xml
+++ b/app/src/main/res/layout/item_group_contacts.xml
@@ -35,7 +35,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:text="Username"
-                app:layout_constraintStart_toEndOf="@+id/imageView"
+                app:layout_constraintStart_toEndOf="@+id/profilePicSelect"
                 app:layout_constraintTop_toBottomOf="@+id/Email" />
 
             <TextView
@@ -44,12 +44,12 @@
                 android:layout_height="wrap_content"
                 android:text="Status"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/imageView"
+                app:layout_constraintStart_toEndOf="@+id/profilePicSelect"
                 app:layout_constraintTop_toBottomOf="@+id/Username"
                 app:layout_constraintVertical_bias="1.0" />
 
             <ImageView
-                android:id="@+id/imageView"
+                android:id="@+id/profilePicSelect"
                 android:layout_width="75dp"
                 android:layout_height="75dp"
                 android:paddingRight="8dp"
