--- a/app/src/main/res/layout/registro_usuario.xml
+++ b/app/src/main/res/layout/registro_usuario.xml
@@ -178,6 +178,7 @@
         android:layout_marginTop="40dp"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="22dp"
+        android:minHeight="48dp"
         app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
