--- a/app/src/main/res/layout/registro.xml
+++ b/app/src/main/res/layout/registro.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#303030">
+    android:background="#FFFEFE">
 
     <LinearLayout
         android:id="@+id/linearLayout"
@@ -27,7 +27,7 @@
             android:fontFamily="sans-serif"
             android:text="REGISTRO"
             android:textAlignment="center"
-            android:textColor="#FFFFFF"
+            android:textColor="#000000"
             android:textSize="48sp"
             android:textStyle="bold" />
     </LinearLayout>
@@ -54,7 +54,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
 
-        android:backgroundTint="#FFFFFF"
+        android:backgroundTint="#000000"
         android:ems="10"
         android:hint="Correo electronico"
         android:inputType="textEmailAddress"
@@ -74,7 +74,7 @@
         android:ems="10"
         android:hint="Nombre"
 
-        android:backgroundTint="#FFFFFF"
+        android:backgroundTint="#000000"
         android:inputType="textPersonName"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -92,7 +92,7 @@
         android:ems="10"
         android:hint="Usuario"
 
-        android:backgroundTint="#FFFFFF"
+        android:backgroundTint="#000000"
         android:inputType="textPersonName"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -107,7 +107,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
-        android:backgroundTint="#FFFFFF"
+        android:backgroundTint="#000000"
         android:ems="10"
         android:hint="Contraseña"
         android:inputType="textPassword"
@@ -157,7 +157,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
-        android:backgroundTint="#FFFFFF"
+        android:backgroundTint="#000000"
         android:ems="10"
         android:hint="Apellidos"
         android:inputType="textPersonName"
